# BookLibrary

./: .gitignore  Backend-Design.md  README.md  Testing.md  pull_request_template.md  pyproject.toml  requirements.txt
fastapi-backend/: __init__.py  config.py  entrypoint.sh  pyproject.toml  requirements.txt
fastapi-backend/main/: app.py
fastapi-backend/models/: books.py  users.py
fastapi-backend/tests/: book_test.py  main_app_test.py  users_test.py
