[tool.poetry]
name = "libraryapp"
version = "0.1.0"
description = "book library app made with fastapi backend and front-end javascript"
authors = ["elephantatech <vivekm.mistry@gmail.com>"]
license = "http://www.apache.org/licenses/LICENSE-2.0"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.73.0"
uvicorn = "^0.17.5"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
black = "^22.1.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
